--- a/css/inc/_normalize.scss
+++ b/css/inc/_normalize.scss
@@ -11,38 +11,38 @@
 article,
 aside,
 details,
-figcaption,
-figure,
+// figcaption,
+// figure,
 footer,
 header,
-hgroup,
+// hgroup,
 nav,
 section,
 summary {
     display: block;
 }
 
-/*
- * Corrects inline-block display not defined in IE6/7/8/9 & FF3
- */
+// /*
+//  * Corrects inline-block display not defined in IE6/7/8/9 & FF3
+//  */
 
-audio,
-canvas,
-video {
-    display: inline-block;
-    *display: inline;
-    *zoom: 1;
-}
+// audio,
+// canvas,
+// video {
+//     display: inline-block;
+//     *display: inline;
+//     *zoom: 1;
+// }
 
-/*
- * Prevents modern browsers from displaying 'audio' without controls
- * Remove excess height in iOS5 devices
- */
+// /*
+//  * Prevents modern browsers from displaying 'audio' without controls
+//  * Remove excess height in iOS5 devices
+//  */
 
-audio:not([controls]) {
-    display: none;
-    height: 0;
-}
+// audio:not([controls]) {
+//     display: none;
+//     height: 0;
+// }
 
 /*
  * Addresses styling for 'hidden' attribute not present in IE7/8/9, FF3, S4
@@ -158,9 +158,9 @@ h6 {
  * Addresses styling not present in IE7/8/9, S5, Chrome
  */
 
-abbr[title] {
-    border-bottom: 1px dotted;
-}
+// abbr[title] {
+    // border-bottom: 1px dotted;
+// }
 
 /*
  * Addresses style set to 'bolder' in FF3+, S4/5, Chrome
@@ -179,18 +179,18 @@ blockquote {
  * Addresses styling not present in S5, Chrome
  */
 
-dfn {
-    font-style: italic;
-}
+// dfn {
+    // font-style: italic;
+// }
 
 /*
  * Addresses styling not present in IE6/7/8/9
  */
 
-mark {
-    background: #ff0;
-    color: #000;
-}
+// mark {
+    // background: #ff0;
+    // color: #000;
+// }
 
 /*
  * Addresses margins set differently in IE6/7
@@ -206,24 +206,24 @@ pre {
  * en.wikipedia.org/wiki/User:Davidgothberg/Test59
  */
 
-pre,
-code,
-kbd,
-samp {
-    font-family: monospace, serif;
-    _font-family: 'courier new', monospace;
-    font-size: 1em;
-}
+// pre,
+// code,
+// kbd,
+// samp {
+//     font-family: monospace, serif;
+//     _font-family: 'courier new', monospace;
+//     font-size: 1em;
+// }
 
 /*
  * Improves readability of pre-formatted text in all browsers
  */
 
-pre {
-    white-space: pre;
-    white-space: pre-wrap;
-    word-wrap: break-word;
-}
+// pre {
+//     white-space: pre;
+//     white-space: pre-wrap;
+//     word-wrap: break-word;
+// }
 
 /*
  * 1. Addresses CSS quotes not supported in IE6/7
@@ -232,17 +232,17 @@ pre {
 
 /* 1 */
 
-q {
-    quotes: none;
-}
+// q {
+//     quotes: none;
+// }
 
 /* 2 */
 
-q:before,
-q:after {
-    content: '';
-    content: none;
-}
+// q:before,
+// q:after {
+//     content: '';
+//     content: none;
+// }
 
 small {
     font-size: 75%;
@@ -253,21 +253,21 @@ small {
  * gist.github.com/413930
  */
 
-sub,
-sup {
-    font-size: 75%;
-    line-height: 0;
-    position: relative;
-    vertical-align: baseline;
-}
+// // sub,
+// sup {
+//     font-size: 75%;
+//     line-height: 0;
+//     position: relative;
+//     vertical-align: baseline;
+// }
 
-sup {
-    top: -0.5em;
-}
+// sup {
+//     top: -0.5em;
+// }
 
-sub {
-    bottom: -0.25em;
-}
+// sub {
+//     bottom: -0.25em;
+// }
 
 
 /* =============================================================================
@@ -278,23 +278,23 @@ sub {
  * Addresses margins set differently in IE6/7
  */
 
-dl,
+// dl,
 menu,
-ol,
+// ol,
 ul {
     margin: 0em 0;
 }
 
-dd {
-    margin: 0 0 0 40px;
-}
+// dd {
+//     margin: 0 0 0 40px;
+// }
 
 /*
  * Addresses paddings set differently in IE6/7
  */
 
 menu,
-ol,
+// ol,
 ul {
     // padding: 0 0 0 40px;
 }
@@ -329,9 +329,9 @@ img {
  * Corrects overflow displayed oddly in IE9
  */
 
-svg:not(:root) {
-    overflow: hidden;
-}
+// svg:not(:root) {
+//     overflow: hidden;
+// }
 
 
 /* =============================================================================
@@ -342,9 +342,9 @@ svg:not(:root) {
  * Addresses margin not present in IE6/7/8/9, S5, O11
  */
 
-figure {
-    margin: 0;
-}
+// figure {
+//     margin: 0;
+// }
 
 
 /* =============================================================================
@@ -355,19 +355,19 @@ figure {
  * Corrects margin displayed oddly in IE6/7
  */
 
-form {
-    margin: 0;
-}
+// form {
+//     margin: 0;
+// }
 
 /*
  * Define consistent border, margin, and padding
  */
 
-fieldset {
-    border: 1px solid #c0c0c0;
-    margin: 0 2px;
-    padding: 0.35em 0.625em 0.75em;
-}
+// fieldset {
+//     border: 1px solid #c0c0c0;
+//     margin: 0 2px;
+//     padding: 0.35em 0.625em 0.75em;
+// }
 
 /*
  * 1. Corrects color not being inherited in IE6/7/8/9
@@ -375,12 +375,12 @@ fieldset {
  * 3. Corrects alignment displayed oddly in IE6/7
  */
 
-legend {
-    border: 0; /* 1 */
-    padding: 0;
-    white-space: normal; /* 2 */
-    *margin-left: -7px; /* 3 */
-}
+// legend {
+//     border: 0; /* 1 */
+//     padding: 0;
+//     white-space: normal; /* 2 */
+//     *margin-left: -7px; /* 3 */
+// }
 
 /*
  * 1. Corrects font size not being inherited in all browsers
@@ -388,24 +388,24 @@ legend {
  * 3. Improves appearance and consistency in all browsers
  */
 
-button,
-input,
-select,
-textarea {
-    font-size: 100%; /* 1 */
-    margin: 0; /* 2 */
-    vertical-align: baseline; /* 3 */
-    *vertical-align: middle; /* 3 */
-}
+// button,
+// input,
+// select,
+// textarea {
+//     font-size: 100%; /* 1 */
+//     margin: 0; /* 2 */
+//     vertical-align: baseline; /* 3 */
+//     *vertical-align: middle; /* 3 */
+// }
 
 /*
  * Addresses FF3/4 setting line-height on 'input' using !important in the UA stylesheet
  */
 
-button,
-input {
-    line-height: normal; /* 1 */
-}
+// button,
+// input {
+//     line-height: normal; /* 1 */
+// }
 
 /*
  * 1. Improves usability and consistency of cursor style between image-type 'input' and others
@@ -414,23 +414,23 @@ input {
  *    Known issue: inner spacing remains in IE6
  */
 
-button,
-input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-    cursor: pointer; /* 1 */
-    -webkit-appearance: button; /* 2 */
-    *overflow: visible;  /* 3 */
-}
+// button,
+// input[type="button"],
+// input[type="reset"],
+// input[type="submit"] {
+//     cursor: pointer; /* 1 */
+//     -webkit-appearance: button; /* 2 */
+//     *overflow: visible;  /* 3 */
+// }
 
 /*
  * Re-set default cursor for disabled elements
  */
 
-button[disabled],
-input[disabled] {
-    cursor: default;
-}
+// button[disabled],
+// input[disabled] {
+//     cursor: default;
+// }
 
 /*
  * 1. Addresses box sizing set to content-box in IE8/9
@@ -439,55 +439,55 @@ input[disabled] {
       Known issue: excess padding remains in IE6
  */
 
-input[type="checkbox"],
-input[type="radio"] {
-    box-sizing: border-box; /* 1 */
-    padding: 0; /* 2 */
-    *height: 13px; /* 3 */
-    *width: 13px; /* 3 */
-}
+// input[type="checkbox"],
+// input[type="radio"] {
+//     box-sizing: border-box; /* 1 */
+//     padding: 0; /* 2 */
+//     *height: 13px; /* 3 */
+//     *width: 13px; /* 3 */
+// }
 
 /*
  * 1. Addresses appearance set to searchfield in S5, Chrome
  * 2. Addresses box-sizing set to border-box in S5, Chrome (include -moz to future-proof)
  */
 
-input[type="search"] {
-    -webkit-appearance: textfield; /* 1 */
-    -moz-box-sizing: content-box;
-    -webkit-box-sizing: content-box; /* 2 */
-    box-sizing: content-box;
-}
+// input[type="search"] {
+//     -webkit-appearance: textfield; /* 1 */
+//     -moz-box-sizing: content-box;
+//     -webkit-box-sizing: content-box; /* 2 */
+//     box-sizing: content-box;
+// }
 
 /*
  * Removes inner padding and search cancel button in S5, Chrome on OS X
  */
 
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-cancel-button {
-    -webkit-appearance: none;
-}
+// input[type="search"]::-webkit-search-decoration,
+// input[type="search"]::-webkit-search-cancel-button {
+//     -webkit-appearance: none;
+// }
 
 /*
  * Removes inner padding and border in FF3+
  * www.sitepen.com/blog/2008/05/14/the-devils-in-the-details-fixing-dojos-toolbar-buttons/
  */
 
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-    border: 0;
-    padding: 0;
-}
+// button::-moz-focus-inner,
+// input::-moz-focus-inner {
+//     border: 0;
+//     padding: 0;
+// }
 
 /*
  * 1. Removes default vertical scrollbar in IE6/7/8/9
  * 2. Improves readability and alignment in all browsers
  */
 
-textarea {
-    overflow: auto; /* 1 */
-    vertical-align: top; /* 2 */
-}
+// textarea {
+//     overflow: auto; /* 1 */
+//     vertical-align: top; /* 2 */
+// }
 
 
 /* =============================================================================
