--- a/css/style.scss
+++ b/css/style.scss
@@ -6,10 +6,9 @@ Author: the WordPress team
 Author URI: http://alexismejias.com/
 Version: 1.3
 -------------------------------------------------------------- */
-@import 'css/inc/variables';
-@import 'css/inc/normalize';
-@import 'css/inc/navigation';
-// @import 'css/inc/zocial';
+@import 'inc/variables';
+@import 'inc/normalize';
+@import 'inc/navigation';
 
 // GLOBALS
 body{
@@ -181,7 +180,7 @@ footer{
 @media screen and (max-width:480px){
 	#content{
 		p{
-			img{ 
+			img{
 				padding:0;
 				margin:10px 0;
 			}
@@ -191,6 +190,15 @@ footer{
 
 
 @media screen and (min-width:481px) and (max-width:720px){
+	header {
+		ul {
+			li {
+				display: inline;
+				padding: 0 15px;
+				float: none;
+			}
+		}
+	}
 	aside{
 		nav{
 			width:95%;
