--- a/css/style.scss
+++ b/css/style.scss
@@ -45,8 +45,9 @@ header{
 		color:#fff;
 		margin:0 3px;
 	}
-	a:hover{
-		color:$grey_dark;
+	a:hover, #header_content a:hover{
+		text-shadow: 2px 2px 10px #666;
+		color: #fff;
 	}
 	h1{
 		margin:0 0 4px 0;
