--- a/style.css
+++ b/style.css
@@ -445,46 +445,47 @@ header a, header a:visited {
   margin: 0 3px;
 }
 /* line 48, style.scss */
-header a:hover {
-  color: #d4d4d4;
+header a:hover, header #header_content a:hover {
+  text-shadow: 2px 2px 10px #666666;
+  color: #fff;
 }
-/* line 51, style.scss */
+/* line 52, style.scss */
 header h1 {
   margin: 0 0 4px 0;
 }
-/* line 54, style.scss */
+/* line 55, style.scss */
 header p {
   margin: 6px 3px;
 }
-/* line 57, style.scss */
+/* line 58, style.scss */
 header ul {
   display: inline-block;
 }
-/* line 59, style.scss */
+/* line 60, style.scss */
 header ul li {
   float: left;
   padding: 0 20px;
 }
 
-/* line 66, style.scss */
+/* line 67, style.scss */
 #content {
   padding: 10px;
   width: 90%;
   margin: 0 auto;
 }
-/* line 71, style.scss */
+/* line 72, style.scss */
 #content h1 {
   margin: 5px 0;
 }
-/* line 75, style.scss */
+/* line 76, style.scss */
 #content h1 + p a {
   background: #d4d4d4;
 }
-/* line 78, style.scss */
+/* line 79, style.scss */
 #content h1 + p a:hover {
   background: #f8f8f8;
 }
-/* line 83, style.scss */
+/* line 84, style.scss */
 #content p img {
   max-width: 100%;
   height: auto;
@@ -495,101 +496,101 @@ header ul li {
   background: #fff;
 }
 
-/* line 95, style.scss */
+/* line 96, style.scss */
 #all_projects {
   width: 100%;
   text-align: center;
 }
-/* line 99, style.scss */
+/* line 100, style.scss */
 #all_projects ul li {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   background: #f8f8f8;
   margin: 3px;
   display: inline-block;
 }
-/* line 104, style.scss */
+/* line 105, style.scss */
 #all_projects ul li:hover {
   background: #d4d4d4;
 }
-/* line 105, style.scss */
+/* line 106, style.scss */
 #all_projects ul li a {
   padding: 5px;
 }
-/* line 106, style.scss */
+/* line 107, style.scss */
 #all_projects ul li p {
   margin: 0;
   text-align: center;
   padding: 5px 0;
 }
 
-/* line 114, style.scss */
+/* line 115, style.scss */
 footer {
   width: 90%;
   margin: 0 auto 20px;
   text-align: center;
 }
-/* line 119, style.scss */
+/* line 120, style.scss */
 footer a, footer a:visited {
   font-size: 13px;
   padding: 4px 8px;
   color: #fff;
 }
-/* line 124, style.scss */
+/* line 125, style.scss */
 footer a:hover {
   color: #d4d4d4;
 }
-/* line 127, style.scss */
+/* line 128, style.scss */
 footer #to_top {
   position: absolute;
   right: 20px;
   color: #000;
 }
-/* line 131, style.scss */
+/* line 132, style.scss */
 footer #to_top:hover {
   color: #d4d4d4;
 }
-/* line 135, style.scss */
+/* line 136, style.scss */
 footer h3 {
   margin-bottom: 10px;
 }
-/* line 139, style.scss */
+/* line 140, style.scss */
 footer .round {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
   border: #f8f8f8 1px solid;
 }
-/* line 145, style.scss */
+/* line 146, style.scss */
 footer .twitter {
   background: #46C0FB;
   border: 1px solid #46c0fb;
 }
-/* line 149, style.scss */
+/* line 150, style.scss */
 footer .behance {
   background: #008CFF;
   border: 1px solid #008cff;
 }
-/* line 153, style.scss */
+/* line 154, style.scss */
 footer .linkedin {
   background: #0083A8;
   border: 1px solid #0083a8;
 }
-/* line 157, style.scss */
+/* line 158, style.scss */
 footer .googleplus {
   background: #DD4B39;
   border: 1px solid #dd4b39;
 }
-/* line 161, style.scss */
+/* line 162, style.scss */
 footer .github {
   background: #DADADA;
   border: 1px solid #dadada;
 }
-/* line 169, style.scss */
+/* line 170, style.scss */
 footer #share {
   width: 100%;
   text-align: center;
 }
-/* line 172, style.scss */
+/* line 173, style.scss */
 footer #share li {
   display: inline-block;
   margin: 6px 0px;
@@ -597,11 +598,11 @@ footer #share li {
 }
 
 @media screen and (max-width: 320px) {
-  /* line 181, style.scss */
+  /* line 182, style.scss */
   #global-nav {
     padding: 10px 0;
   }
-  /* line 183, style.scss */
+  /* line 184, style.scss */
   #global-nav li {
     display: inline;
     padding: 0 13px;
@@ -609,95 +610,95 @@ footer #share li {
   }
 }
 @media screen and (max-width: 480px) {
-  /* line 193, style.scss */
+  /* line 194, style.scss */
   #content p img {
     padding: 0;
     margin: 10px 0;
   }
 }
 @media screen and (min-width: 481px) and (max-width: 720px) {
-  /* line 203, style.scss */
+  /* line 204, style.scss */
   aside nav {
     width: 95%;
     margin: 0 auto;
     text-align: center;
   }
-  /* line 208, style.scss */
+  /* line 209, style.scss */
   aside nav ul li {
     display: inline-block;
     margin: 2px;
   }
-  /* line 211, style.scss */
+  /* line 212, style.scss */
   aside nav ul li a:hover {
     background: #d4d4d4;
   }
 }
 @media screen and (min-width: 721px) {
-  /* line 221, style.scss */
+  /* line 222, style.scss */
   header {
     height: 90px;
     text-align: left;
   }
-  /* line 224, style.scss */
+  /* line 225, style.scss */
   header #header_content, header #global {
     float: left;
   }
-  /* line 227, style.scss */
+  /* line 228, style.scss */
   header #header_content {
     margin-left: 2.3%;
   }
-  /* line 229, style.scss */
+  /* line 230, style.scss */
   header #header_content p {
     margin-top: 0;
   }
-  /* line 232, style.scss */
+  /* line 233, style.scss */
   header #header_content a {
     display: block;
   }
-  /* line 236, style.scss */
+  /* line 237, style.scss */
   header #global {
     margin-top: 17px;
   }
 
-  /* line 241, style.scss */
+  /* line 242, style.scss */
   aside {
     float: left;
     width: 17%;
     margin-left: 1.5%;
     position: fixed;
   }
-  /* line 246, style.scss */
+  /* line 247, style.scss */
   aside nav {
     padding: 5px 0;
     background: #f8f8f8;
   }
-  /* line 250, style.scss */
+  /* line 251, style.scss */
   aside nav #projects li {
     display: list-item;
     margin-right: 0;
   }
 
-  /* line 257, style.scss */
+  /* line 258, style.scss */
   section#content {
     width: 77%;
     margin: 0 0 0 19%;
     padding: 2%;
   }
-  /* line 261, style.scss */
+  /* line 262, style.scss */
   section#content img {
     display: inline;
   }
-  /* line 264, style.scss */
+  /* line 265, style.scss */
   section#content h1 + p {
     width: 60%;
   }
 
-  /* line 269, style.scss */
+  /* line 270, style.scss */
   footer {
     float: left;
     width: 100%;
   }
-  /* line 272, style.scss */
+  /* line 273, style.scss */
   footer #to_top {
     position: fixed;
     right: 20px;
