--- a/css/inc/_variables.scss
+++ b/css/inc/_variables.scss
@@ -1,4 +1,8 @@
 // VARIABLES
-$header_color:#BADA55;
-$grey_dark:#D4D4D4;
-$grey_light:#f8f8f8;
+$header_color: #BADA55;
+$grey_dark: #D4D4D4;
+$grey_light: #f8f8f8;
+
+$sans_family: 'Dosis', Helvetica, Verdana, sans-serif;
+
+$DEBUG: false;
