--- a/css/style.scss
+++ b/css/style.scss
@@ -9,341 +9,5 @@ Version: 1.3
 @import 'inc/variables';
 @import 'inc/normalize';
 @import 'inc/navigation';
-
-// GLOBALS
-body {
-	font-family: 'Dosis',Helvetica, Verdana, sans-serif;
-}
-h1, h2, h3, h4, h5, h6, b,strong {
-	font-weight: 700;
-}
-a {
-	text-decoration: none;
-	color: #000;
-	&:visited,&:hover {
-		color: #000;
-	}
-}
-ul {
-	padding: 0;
-	margin: 0;
-}
-
-body {
-	background: #fff url(img/noise4.png) repeat center center;
-}
-
-header {
-	color: #fff;
-	width: 100%;
-	text-align: center;
-	background: $header_color;
-	margin-bottom: 10px;
-	padding: 3px 0;
-	box-shadow: 0 1px 5px rgba(0,0,0,0.5);
-	a, a:visited {
-		color: #fff;
-		margin: 0 3px;
-	}
-	a:hover, #header_content a:hover {
-		text-shadow: 2px 2px 10px #666;
-		color: #fff;
-	}
-	h1 {
-		margin: 0 0 4px 0;
-	}
-	p {
-		margin: 6px 3px;
-	}
-	ul {
-		display: inline-block;
-		li {
-			float: left;
-			padding: 0 20px;
-		}
-	}
-} //end header
-
-#content {
-	padding: 10px;
-	width: 90%;
-	margin: 0 auto;
-
-	h1 {
-		margin: 5px 0;
-	}
-	h1+p {
-		a {
-			background: $grey_dark;
-		}
-		a:hover {
-			background: $grey_light;
-		}
-	}
-	p {
-		img {
-			max-width: 100%;
-			height: auto;
-			margin: 10px;
-			display: block;
-			padding: 10px;
-			box-shadow: 0 0 5px rgba(0,0,0,0.5);
-			background: #fff;
-		}
-	}
-
-	&.resume {
-		.section {
-			width: 77%;
-			padding-bottom: 20px;
-			overflow: hidden;
-			h2, h3 {
-				// font-family: "Helvetica Neue","Helvetica",Helvetica, Arial, sans-serif;
-				letter-spacing: 1px;
-				font-size: 14px;
-			}
-			.left {
-				display: inline;
-				float: left;
-				width: 15%;
-				text-align: right;
-				h2 {
-					display: inline;
-					padding: 0 10px 0 0;
-					margin: 0;
-				}
-			}
-			.right {
-				float: right;
-				width: 85%;
-				.heading {
-					h3 {
-						margin: 0;
-						display: inline;
-						font-weight: 700;
-					}
-					.company {
-						float: left;
-					}
-					.date {
-						float: right
-					}
-					.position {
-						width: 100%;
-						float: left;
-					}
-				}
-				p, li {
-					// font-family: Palatino, Georgia,"Times New Roman",serif;
-					font-size: 14px;
-					line-height: 20px;
-				}
-				p {
-					margin: 0;
-					float: left;
-				}
-				ul {
-					list-style: none;
-					padding-top: 2px;
-				}
-			}
-		}
-	}
-}
-
-#all_projects {
-	width: 100%;
-	text-align: center;
-	ul {
-		li {
-			box-shadow: 0 1px 3px rgba(0,0,0,0.2);
-			background: $grey_light;
-			margin: 3px;
-			display: inline-block;
-			&:hover {background: $grey_dark;}
-			a {padding: 5px;}
-			p {
-				margin: 0;
-				text-align: center;
-				padding: 5px 0;
-			}
-		}
-	}
-}
-footer {
-	width: 90%;
-	margin: 0 auto 20px;
-	text-align: center;
-
-	a, a:visited {
-		font-size: 13px;
-		padding: 4px 8px;
-		color: #fff;
-	}
-	a:hover {
-		color: $grey_dark;
-	}
-	#to_top {
-		position: absolute;
-		right: 20px;
-		color: #000;
-		&:hover {
-			color: $grey_dark;
-		}
-	}
-	h3 {
-		margin-bottom: 10px;
-	}
-
-	.round {
-		-moz-border-radius: 5px;
-		-webkit-border-radius: 5px;
-		border-radius: 5px;
-		border: $grey_light 1px solid;
-	}
-	.twitter {
-		background: #46C0FB;
-		border: 1px solid #46C0FB;
-	}
-	.behance {
-		background: #008CFF;
-		border: 1px solid #008CFF;
-	}
-	.linkedin {
-		background: #0083A8;
-		border: 1px solid #0083A8;
-	}
-	.googleplus {
-		background: #DD4B39;
-		border: 1px solid #DD4B39;
-	}
-	.github {
-		background: #DADADA;
-		border: 1px solid #DADADA;
-	}
-	// .reddit, a.reddit:visited {
-	// 	background: #F58262;
-	// 	// color: #000;
-	// }
-	#share {
-		width: 100%;
-		text-align: center;
-		li {
-			display: inline-block;
-			margin: 6px 0px;
-			list-style-type: none;
-		}
-	}
-}
-
-@media screen and (max-width: 320px) {
-	#global-nav {
-			padding: 10px 0;
-			li {
-				display: inline;
-				padding: 0 13px;
-				float: none;
-			}
-		}
-}
-@media screen and (max-width: 480px){
-	#content {
-		p {
-			img {
-				padding: 0;
-				margin: 10px 0;
-			}
-		}
-	}
-}
-
-@media screen and (min-width: 481px) and (max-width: 720px){
-	aside {
-		nav {
-			width: 95%;
-			margin: 0 auto;
-			text-align: center;
-			ul {
-				li {
-					display: inline-block;
-					margin: 2px;
-					a:hover {
-						background: $grey_dark;
-					}
-				}
-			}
-		}
-
-	}
-}
-
-@media screen and (min-width: 721px){
-	header {
-		height: 90px;
-		text-align: left;
-		#header_content,#global {
-			float: left;
-		}
-		#header_content {
-			margin-left: 2.3%;
-			p {
-				margin-top: 0;
-			}
-			a {
-				display: block;
-			}
-		}
-		#global {
-			// margin-left: 250px;
-			margin-top: 17px;
-		}
-	}
-	aside {
-		float: left;
-		width: 17%;
-		margin-left: 1.5%;
-		position: fixed;
-		margin-top: 30px;
-		nav {
-			padding: 5px 0;
-			background: $grey_light;
-			#projects {
-				li {
-					display: list-item;
-					margin-right: 0
-				}
-			}
-		}
-	}
-	section#content {
-		width: 77%;
-		margin: 0 0 0 19%;
-		padding: 24px 2%;
-		img {
-			display: inline;
-		}
-		h1 + p {
-			width: 60%;
-		}
-
-	}
-	footer {
-		float: left;
-		width: 100%;
-		#to_top {
-			position: fixed;
-			right: 20px;
-			bottom: 53px;
-		}
-	}
-}
-
-@media screen and (min-width: 951px){
-	.section {
-		.left {
-			width: 85%;
-			text-align: left;
-			float: right;
-		}
-	}
-}
+@import 'inc/main';
+@import 'inc/media_queries';
