--- a/style.css
+++ b/style.css
@@ -398,38 +398,38 @@ table {
     display: block !important;
   }
 }
-/* line 14, style.scss */
+/* line 1, inc/_main.scss */
 body {
-  font-family: 'Dosis',Helvetica,Verdana,sans-serif;
+  font-family: "Dosis", Helvetica, Verdana, sans-serif;
 }
 
-/* line 17, style.scss */
+/* line 5, inc/_main.scss */
 h1, h2, h3, h4, h5, h6, b, strong {
   font-weight: 700;
 }
 
-/* line 20, style.scss */
+/* line 8, inc/_main.scss */
 a {
   text-decoration: none;
   color: #000;
 }
-/* line 23, style.scss */
+/* line 12, inc/_main.scss */
 a:visited, a:hover {
   color: #000;
 }
 
-/* line 27, style.scss */
+/* line 16, inc/_main.scss */
 ul {
   padding: 0;
   margin: 0;
 }
 
-/* line 32, style.scss */
+/* line 21, inc/_main.scss */
 body {
   background: white url(img/noise4.png) repeat center center;
 }
 
-/* line 36, style.scss */
+/* line 25, inc/_main.scss */
 header {
   color: #fff;
   width: 100%;
@@ -439,53 +439,53 @@ header {
   padding: 3px 0;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
 }
-/* line 44, style.scss */
+/* line 33, inc/_main.scss */
 header a, header a:visited {
   color: #fff;
   margin: 0 3px;
 }
-/* line 48, style.scss */
+/* line 38, inc/_main.scss */
 header a:hover, header #header_content a:hover {
   text-shadow: 2px 2px 10px #666666;
   color: #fff;
 }
-/* line 52, style.scss */
+/* line 42, inc/_main.scss */
 header h1 {
   margin: 0 0 4px 0;
 }
-/* line 55, style.scss */
+/* line 45, inc/_main.scss */
 header p {
   margin: 6px 3px;
 }
-/* line 58, style.scss */
+/* line 48, inc/_main.scss */
 header ul {
   display: inline-block;
 }
-/* line 60, style.scss */
+/* line 50, inc/_main.scss */
 header ul li {
   float: left;
-  padding: 0 20px;
+  padding: 0 15px;
 }
 
-/* line 67, style.scss */
+/* line 65, inc/_main.scss */
 #content {
   padding: 10px;
   width: 90%;
   margin: 0 auto;
 }
-/* line 72, style.scss */
+/* line 70, inc/_main.scss */
 #content h1 {
   margin: 5px 0;
 }
-/* line 76, style.scss */
+/* line 74, inc/_main.scss */
 #content h1 + p a {
   background: #d4d4d4;
 }
-/* line 79, style.scss */
+/* line 77, inc/_main.scss */
 #content h1 + p a:hover {
   background: #f8f8f8;
 }
-/* line 84, style.scss */
+/* line 82, inc/_main.scss */
 #content p img {
   max-width: 100%;
   height: auto;
@@ -495,235 +495,222 @@ header ul li {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   background: #fff;
 }
-/* line 96, style.scss */
+/* line 94, inc/_main.scss */
 #content.resume .section {
-  width: 77%;
   padding-bottom: 20px;
   overflow: hidden;
 }
-/* line 100, style.scss */
+/* line 97, inc/_main.scss */
 #content.resume .section h2, #content.resume .section h3 {
   letter-spacing: 1px;
   font-size: 14px;
 }
-/* line 105, style.scss */
-#content.resume .section .left {
-  display: inline;
-  float: left;
-  width: 15%;
-  text-align: right;
-}
-/* line 110, style.scss */
+/* line 103, inc/_main.scss */
 #content.resume .section .left h2 {
   display: inline;
   padding: 0 10px 0 0;
   margin: 0;
 }
-/* line 116, style.scss */
-#content.resume .section .right {
-  float: right;
-  width: 85%;
-}
-/* line 120, style.scss */
+/* line 111, inc/_main.scss */
 #content.resume .section .right .heading h3 {
   margin: 0;
-  display: inline;
+  display: block;
   font-weight: 700;
 }
-/* line 125, style.scss */
-#content.resume .section .right .heading .company {
-  float: left;
-}
-/* line 128, style.scss */
-#content.resume .section .right .heading .date {
-  float: right;
-}
-/* line 131, style.scss */
-#content.resume .section .right .heading .position {
-  width: 100%;
-  float: left;
-}
-/* line 136, style.scss */
+/* line 117, inc/_main.scss */
 #content.resume .section .right p, #content.resume .section .right li {
   font-size: 14px;
   line-height: 20px;
 }
-/* line 141, style.scss */
+/* line 121, inc/_main.scss */
 #content.resume .section .right p {
   margin: 0;
   float: left;
 }
-/* line 145, style.scss */
+/* line 125, inc/_main.scss */
 #content.resume .section .right ul {
   list-style: none;
   padding-top: 2px;
 }
 
-/* line 154, style.scss */
+/* line 134, inc/_main.scss */
 #all_projects {
   width: 100%;
   text-align: center;
 }
-/* line 158, style.scss */
+/* line 138, inc/_main.scss */
 #all_projects ul li {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   background: #f8f8f8;
   margin: 3px;
   display: inline-block;
 }
-/* line 163, style.scss */
+/* line 143, inc/_main.scss */
 #all_projects ul li:hover {
   background: #d4d4d4;
 }
-/* line 164, style.scss */
+/* line 144, inc/_main.scss */
 #all_projects ul li a {
   padding: 5px;
 }
-/* line 165, style.scss */
+/* line 145, inc/_main.scss */
 #all_projects ul li p {
   margin: 0;
   text-align: center;
   padding: 5px 0;
 }
 
-/* line 173, style.scss */
+/* line 153, inc/_main.scss */
 footer {
   width: 90%;
   margin: 0 auto 20px;
   text-align: center;
 }
-/* line 178, style.scss */
+/* line 158, inc/_main.scss */
 footer a, footer a:visited {
   font-size: 13px;
   padding: 4px 8px;
   color: #fff;
 }
-/* line 183, style.scss */
+/* line 163, inc/_main.scss */
 footer a:hover {
   color: #d4d4d4;
 }
-/* line 186, style.scss */
+/* line 166, inc/_main.scss */
 footer #to_top {
   position: absolute;
   right: 20px;
   color: #000;
 }
-/* line 190, style.scss */
+/* line 170, inc/_main.scss */
 footer #to_top:hover {
   color: #d4d4d4;
 }
-/* line 194, style.scss */
+/* line 174, inc/_main.scss */
 footer h3 {
   margin-bottom: 10px;
 }
-/* line 198, style.scss */
+/* line 178, inc/_main.scss */
 footer .round {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
   border: #f8f8f8 1px solid;
 }
-/* line 204, style.scss */
+/* line 184, inc/_main.scss */
 footer .twitter {
   background: #46C0FB;
   border: 1px solid #46c0fb;
 }
-/* line 208, style.scss */
+/* line 188, inc/_main.scss */
 footer .behance {
   background: #008CFF;
   border: 1px solid #008cff;
 }
-/* line 212, style.scss */
+/* line 192, inc/_main.scss */
 footer .linkedin {
   background: #0083A8;
   border: 1px solid #0083a8;
 }
-/* line 216, style.scss */
+/* line 196, inc/_main.scss */
 footer .googleplus {
   background: #DD4B39;
   border: 1px solid #dd4b39;
 }
-/* line 220, style.scss */
+/* line 200, inc/_main.scss */
 footer .github {
   background: #DADADA;
   border: 1px solid #dadada;
 }
-/* line 228, style.scss */
+/* line 204, inc/_main.scss */
 footer #share {
   width: 100%;
   text-align: center;
 }
-/* line 231, style.scss */
+/* line 207, inc/_main.scss */
 footer #share li {
   display: inline-block;
   margin: 6px 0px;
   list-style-type: none;
 }
 
-@media screen and (max-width: 320px) {
-  /* line 240, style.scss */
-  #global-nav {
-    padding: 10px 0;
-  }
-  /* line 242, style.scss */
-  #global-nav li {
-    display: inline;
-    padding: 0 13px;
-    float: none;
-  }
-}
 @media screen and (max-width: 480px) {
-  /* line 252, style.scss */
+  /* line 11, inc/_media_queries.scss */
   #content p img {
     padding: 0;
     margin: 10px 0;
   }
 }
 @media screen and (min-width: 481px) and (max-width: 720px) {
-  /* line 262, style.scss */
+  /* line 28, inc/_media_queries.scss */
   aside nav {
     width: 95%;
     margin: 0 auto;
     text-align: center;
   }
-  /* line 267, style.scss */
+  /* line 33, inc/_media_queries.scss */
   aside nav ul li {
     display: inline-block;
     margin: 2px;
   }
-  /* line 270, style.scss */
+  /* line 36, inc/_media_queries.scss */
   aside nav ul li a:hover {
     background: #d4d4d4;
   }
+
+  /* line 47, inc/_media_queries.scss */
+  #content.resume .section .right .heading .company {
+    width: auto;
+    float: left;
+  }
+  /* line 51, inc/_media_queries.scss */
+  #content.resume .section .right .heading .date {
+    float: right;
+  }
+  /* line 54, inc/_media_queries.scss */
+  #content.resume .section .right .heading .position {
+    width: 100%;
+    float: left;
+  }
+}
+@media screen and (min-width: 637px) {
+  /* line 73, inc/_media_queries.scss */
+  #content.resume .section .right .company {
+    width: 100%;
+  }
+  /* line 76, inc/_media_queries.scss */
+  #content.resume .section .right .date {
+    float: left;
+  }
 }
 @media screen and (min-width: 721px) {
-  /* line 281, style.scss */
+  /* line 90, inc/_media_queries.scss */
   header {
     height: 90px;
     text-align: left;
   }
-  /* line 284, style.scss */
+  /* line 93, inc/_media_queries.scss */
   header #header_content, header #global {
     float: left;
   }
-  /* line 287, style.scss */
+  /* line 96, inc/_media_queries.scss */
   header #header_content {
     margin-left: 2.3%;
   }
-  /* line 289, style.scss */
+  /* line 98, inc/_media_queries.scss */
   header #header_content p {
     margin-top: 0;
   }
-  /* line 292, style.scss */
+  /* line 101, inc/_media_queries.scss */
   header #header_content a {
     display: block;
   }
-  /* line 296, style.scss */
+  /* line 105, inc/_media_queries.scss */
   header #global {
     margin-top: 17px;
   }
 
-  /* line 301, style.scss */
+  /* line 110, inc/_media_queries.scss */
   aside {
     float: left;
     width: 17%;
@@ -731,49 +718,73 @@ footer #share li {
     position: fixed;
     margin-top: 30px;
   }
-  /* line 307, style.scss */
+  /* line 116, inc/_media_queries.scss */
   aside nav {
     padding: 5px 0;
     background: #f8f8f8;
   }
-  /* line 311, style.scss */
+  /* line 120, inc/_media_queries.scss */
   aside nav #projects li {
     display: list-item;
     margin-right: 0;
   }
 
-  /* line 318, style.scss */
-  section#content {
+  /* line 127, inc/_media_queries.scss */
+  #content {
     width: 77%;
     margin: 0 0 0 19%;
     padding: 24px 2%;
   }
-  /* line 322, style.scss */
-  section#content img {
+  /* line 131, inc/_media_queries.scss */
+  #content img {
     display: inline;
   }
-  /* line 325, style.scss */
-  section#content h1 + p {
+  /* line 134, inc/_media_queries.scss */
+  #content h1 + p {
     width: 60%;
   }
+  /* line 141, inc/_media_queries.scss */
+  #content.resume .section .right .heading .company {
+    display: inline;
+  }
+  /* line 144, inc/_media_queries.scss */
+  #content.resume .section .right .heading .date {
+    float: right;
+  }
 
-  /* line 330, style.scss */
+  /* line 153, inc/_media_queries.scss */
   footer {
     float: left;
     width: 100%;
   }
-  /* line 333, style.scss */
+  /* line 156, inc/_media_queries.scss */
   footer #to_top {
     position: fixed;
     right: 20px;
     bottom: 53px;
   }
 }
-@media screen and (min-width: 951px) {
-  /* line 343, style.scss */
-  .section .left {
+@media screen and (min-width: 851px) {
+  /* line 170, inc/_media_queries.scss */
+  #content.resume {
+    width: 50%;
+    padding-left: 10px;
+  }
+  /* line 174, inc/_media_queries.scss */
+  #content.resume .section .right {
     width: 85%;
     text-align: left;
     float: right;
+  }
+  /* line 179, inc/_media_queries.scss */
+  #content.resume .section .right.skills ul {
+    width: 37%;
+    float: left;
+  }
+  /* line 185, inc/_media_queries.scss */
+  #content.resume .section .left {
+    width: 15%;
+    text-align: right;
+    float: left;
   }
 }
